# rar-dash

./: .gitignore  README.md  app.py  main.py  pyproject.toml
scripts/: extract.py
