[project]
name = "rar-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-auth>=2.49.2",
    "gspread>=6.2.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyyaml>=6.0.3",
    "streamlit>=1.56.0",
    "streamlit-authenticator>=0.4.2",
]
